--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
 	<table id="myTable" align="center">
   <tr>
   	<td>Poster</td>
-    <td>
-    	<tr>Title</tr>
-    	<tr>Year</tr>
-    	<tr>imdbId</tr>
-    	<tr>Type</tr>
-    </td>
+    <td>Details</td>
+
+  
     
   </tr>
 </table>
